<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/id_dialog_share_singlemac_file"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center" 
	android:gravity="center"
	android:orientation="vertical">
	<RelativeLayout
		android:layout_width="@dimen/dialog_width"
		android:layout_height="@dimen/space_30"

		android:background="@drawable/chs_ly_aux_input_top_bg"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="@dimen/space_30"
			android:layout_marginLeft="@dimen/space_10"
			android:gravity="center_vertical"
			android:text="@string/SSM_ShareOpt"
			android:textAllCaps="false"
			android:textColor="#FFffffff"
			android:textSize="15sp" />
		<ImageView
			android:id="@+id/id_chs_dialog_exit"
			android:layout_width="30dp"
			android:layout_height="30dp"
			android:layout_marginRight="5dp"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:src="@drawable/chs_dialog_exit"
			android:textAllCaps="false"
			android:visibility="gone"
			android:textSize="13sp"/>
	</RelativeLayout>
	<LinearLayout
		android:layout_width="@dimen/dialog_width"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:gravity="center"
		android:background="@drawable/chs_ly_aux_input_img_normal"
		android:orientation="vertical">
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="@dimen/space_40"
			android:layout_marginTop="5dp"
			android:gravity="center"
			android:layout_centerVertical="true"
			android:layout_marginLeft="@dimen/space_15"
			android:text="@string/SSM_ShareMacMSG"
			android:textAllCaps="false"
			android:textColor="#FFffffff"
			android:textSize="15sp" />
		</RelativeLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/space_40"
			android:layout_gravity="center"
			android:gravity="center"

			android:orientation="horizontal">

			<LinearLayout
				android:id="@+id/id_llyout_single_sel"
				android:layout_width="0dp"
				android:layout_height="40dp"
				android:layout_gravity="center_vertical"
				android:gravity="center"
				android:layout_weight="1"
				android:orientation="horizontal">
				<Button
					android:id="@+id/id_b_sel_single"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_marginLeft="10dp"
					android:layout_gravity="center_vertical"
					android:scaleType="fitXY"
					android:clickable="false"
					android:background="@drawable/chs_ssm_btncheck_press"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:gravity="center"
					android:layout_marginLeft="10dp"
					android:text="@string/SSM_Single"
					android:textAllCaps="false"
					android:textColor="#FFffffff"
					android:textSize="15sp" />

			</LinearLayout>

			<LinearLayout
				android:id="@+id/id_llyout_mac_sel"
				android:layout_width="0dp"
				android:layout_height="40dp"
				android:layout_gravity="center"
				android:gravity="center"
				android:layout_weight="1"
				android:orientation="horizontal">
				<Button
					android:id="@+id/id_b_sel_mac"
					android:layout_width="25dp"
					android:layout_height="25dp"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="10dp"
					android:clickable="false"
					android:scaleType="fitXY"
					android:background="@drawable/chs_ssm_btncheck_normal"
					/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_gravity="center"
					android:gravity="center"
					android:layout_marginLeft="10dp"
					android:text="@string/SSM_Machine"
					android:textAllCaps="false"
					android:textColor="#FFffffff"
					android:textSize="15sp" />
			</LinearLayout>
		</LinearLayout>
		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"


			>
		<TextView
			android:id="@+id/id_b_mac_msg"
			android:layout_width="wrap_content"
			android:layout_height="40dp"

			android:layout_centerVertical="true"
			android:layout_marginLeft="@dimen/space_10"
			android:layout_marginRight="@dimen/space_10"
			android:gravity="center"

			android:text="@string/SSM_ShareMacTxt"
			android:textAllCaps="false"
			android:textColor="#FFffffff"
			android:textSize="15sp" />
		</RelativeLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginTop="10dp"

            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
			android:background="@color/dialog_midline_color"
			/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/space_50"
			android:layout_gravity="center"
			android:gravity="center"
			android:layout_marginRight="@dimen/space_10"
			android:orientation="horizontal">
			<View
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:background="@null"
				/>
			<Button
				android:id="@+id/id_b_ssm_cancel"
				android:layout_width="70dp"
				android:layout_height="@dimen/space_30"
				android:layout_gravity="center"
				android:scaleType="fitXY"
				android:background="@drawable/chs_dialog_btn_normal"
				android:text="@string/cancel"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:textSize="13sp"
				/>


			<Button
				android:id="@+id/id_b_ssm_save"
				android:layout_width="70dp"
				android:layout_height="@dimen/space_30"
				android:layout_gravity="center"

				android:layout_marginLeft="@dimen/space_10"
				android:scaleType="fitXY"
				android:background="@drawable/chs_dialog_btn_normal"
				android:text="Share"
				android:textAllCaps="false"
				android:textColor="@color/white"
				android:textSize="13sp"
				/>
		</LinearLayout>

	</LinearLayout>

</LinearLayout>