<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/id_dialog_share_singlemac_file"
	android:layout_width="250dp"
	android:layout_height="250dp"
	android:layout_gravity="center" 
	android:gravity="center"
	android:background="@null"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="250dp"
		android:layout_height="250dp"
		android:layout_gravity="center"
		android:gravity="center"
		android:background="@drawable/chs_dialog_bg"
		android:orientation="vertical">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_text_msg"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/SetDelay"
                android:textColor="@color/color_dialogText"
                android:layout_centerInParent="true"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:gravity="center"/>

            <Button
                android:id="@+id/id_chs_dialog_exit"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginRight="15dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/chs_dialog_exit"
                android:textAllCaps="false"
                android:textSize="15sp"/>

        </RelativeLayout>
		<View
			android:id="@+id/id_v_0"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:background="@color/dialog_midline_color"
			/>
		<Button
			android:id="@+id/id_chs_dialog_btn0"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/CM"
            android:textColor="@color/color_dialogItemTextNormal"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textSize="15sp"
            />
		<View
			android:id="@+id/id_v_1"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:background="@color/dialog_midline_color"
			/>
        <Button
            android:id="@+id/id_chs_dialog_btn1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/MS"
            android:textColor="@color/color_dialogItemTextNormal"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textSize="15sp"
            />
		<View
			android:id="@+id/id_v_2"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:layout_marginRight="15dp"
			android:layout_marginLeft="15dp"
			android:background="@color/dialog_midline_color"
			/>
        <Button
            android:id="@+id/id_chs_dialog_btn2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:text="@string/Inch"
            android:textColor="@color/color_dialogItemTextNormal"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:textSize="15sp"
            />



    </LinearLayout>

</LinearLayout>